@@ -6,7 +6,7 @@
     <artifactId>parent</artifactId>
     <name>Cyberduck</name>
     <packaging>pom</packaging>
-    <version>7.10.0-SNAPSHOT</version>
+    <version>8.1.0-SNAPSHOT</version>
 
     <modules>
         <!-- Core components -->
@@ -29,7 +29,6 @@
         <!-- Protocols -->
         <module>jersey</module>
         <module>oauth</module>
-        <module>udt</module>
         <module>irods</module>
         <module>spectra</module>
         <module>s3</module>
@@ -49,8 +48,11 @@
         <module>storegate</module>
         <module>brick</module>
         <module>nextcloud</module>
+        <module>owncloud</module>
         <module>manta</module>
         <module>ctera</module>
+        <module>eue</module>
+        <module>freenet</module>
         <module>protocols</module>
         <module>protocols/dll</module>
         <!-- Test -->
@@ -63,7 +65,6 @@
         <module>cli/linux</module>
         <module>cli/windows</module>
         <module>cli/osx</module>
-        <module>gmxcloud</module>
     </modules>
 
     <scm>
@@ -75,13 +76,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <argLine />
-        <jna-version>5.7.0</jna-version>
-        <jersey-version>2.34</jersey-version>
-        <jackson-version>2.12.3</jackson-version>
-        <slf4j-version>1.7.30</slf4j-version>
+        <jna-version>5.10.0</jna-version>
+        <jersey-version>2.35</jersey-version>
+        <jackson-version>2.12.5</jackson-version>
+        <slf4j-version>1.7.32</slf4j-version>
         <bouncycastle-version>1.69</bouncycastle-version>
         <httpclient-version>4.5.13</httpclient-version>
-        <google-http-client.version>1.39.2</google-http-client.version>
+        <google-http-client.version>1.40.1</google-http-client.version>
     </properties>
 
     <dependencyManagement>
@@ -110,7 +111,7 @@
             <dependency>
                 <groupId>ch.iterate.s3</groupId>
                 <artifactId>jets3t</artifactId>
-                <version>0.9.27</version>
+                <version>0.9.31</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -155,12 +156,12 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-pool2</artifactId>
-                <version>2.10.0</version>
+                <version>2.11.1</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.10.0</version>
+                <version>2.11.0</version>
             </dependency>
             <dependency>
                 <groupId>commons-collections</groupId>
@@ -185,7 +186,7 @@
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>2.8.7</version>
+                <version>2.8.9</version>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
@@ -270,17 +271,17 @@
             <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
-                <version>2.10.10</version>
+                <version>2.10.13</version>
             </dependency>
             <dependency>
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
-                <version>1.6.2</version>
+                <version>1.6.3</version>
             </dependency>
             <dependency>
                 <groupId>io.swagger.core.v3</groupId>
                 <artifactId>swagger-annotations</artifactId>
-                <version>2.1.10</version>
+                <version>2.1.11</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.core</groupId>
@@ -310,12 +311,12 @@
             <dependency>
                 <groupId>com.google.oauth-client</groupId>
                 <artifactId>google-oauth-client</artifactId>
-                <version>1.31.5</version>
+                <version>1.32.1</version>
             </dependency>
             <dependency>
                 <groupId>com.google.api-client</groupId>
                 <artifactId>google-api-client</artifactId>
-                <version>1.32.1</version>
+                <version>1.32.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.http-client</groupId>
@@ -352,7 +353,7 @@
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>30.1.1-jre</version>
+                <version>31.0.1-jre</version>
             </dependency>
             <dependency>
                 <groupId>com.joyent.util</groupId>
@@ -458,19 +459,29 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.3.0</version>
+                    <version>3.3.1</version>
                     <configuration>
                         <source>8</source>
                         <doclint>none</doclint>
                         <encoding>UTF-8</encoding>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>aggregate</goal>
+                            </goals>
+                            <phase>site</phase>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
-                        <argLine>@{argLine} -Djava.library.path=${project.build.directory}</argLine>
-                        <systemPropertiesFile>${env.HOME}/test.properties</systemPropertiesFile>
+                        <argLine>@{argLine} --add-opens=java.base/java.lang=ALL-UNNAMED
+                            -Djava.library.path=${project.build.directory}
+                        </argLine>
+                        <systemPropertiesFile>${maven.multiModuleProjectDirectory}/test.properties</systemPropertiesFile>
                         <systemPropertyVariables>
                             <jdk.tls.useExtendedMasterSecret>false</jdk.tls.useExtendedMasterSecret>
                             <jna.library.path>${project.build.directory}</jna.library.path>
@@ -488,8 +499,10 @@
                     <configuration>
                         <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                         <encoding>UTF-8</encoding>
-                        <argLine>@{argLine} -Djava.library.path=${project.build.directory}</argLine>
-                        <systemPropertiesFile>${env.HOME}/test.properties</systemPropertiesFile>
+                        <argLine>@{argLine} --add-opens=java.base/java.lang=ALL-UNNAMED
+                            -Djava.library.path=${project.build.directory}
+                        </argLine>
+                        <systemPropertiesFile>${maven.multiModuleProjectDirectory}/test.properties</systemPropertiesFile>
                         <systemPropertyVariables>
                             <jdk.tls.useExtendedMasterSecret>false</jdk.tls.useExtendedMasterSecret>
                             <jna.library.path>${project.build.directory}</jna.library.path>
@@ -565,7 +578,7 @@
                 <plugin>
                     <groupId>org.commonjava.maven.plugins</groupId>
                     <artifactId>directory-maven-plugin</artifactId>
-                    <version>0.3.1</version>
+                    <version>1.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
@@ -578,23 +591,60 @@
                         <dependency>
                             <groupId>org.apache.maven.doxia</groupId>
                             <artifactId>doxia-module-markdown</artifactId>
-                            <version>1.9.1</version>
+                            <version>1.10</version>
                         </dependency>
                     </dependencies>
+                    <configuration>
+                        <skipDeploy>true</skipDeploy>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>io.swagger</groupId>
                     <artifactId>swagger-codegen-maven-plugin</artifactId>
-                    <version>2.4.21</version>
+                    <version>2.4.23</version>
                 </plugin>
                 <plugin>
                     <groupId>io.swagger.codegen.v3</groupId>
                     <artifactId>swagger-codegen-maven-plugin</artifactId>
-                    <version>3.0.27</version>
+                    <version>3.0.29</version>
+                    <configuration>
+                        <configOptions>
+                            <sourceFolder>src/main/java</sourceFolder>
+                            <library>jersey2</library>
+                            <dateLibrary>joda</dateLibrary>
+                            <java8>true</java8>
+                            <hideGenerationTimestamp>true</hideGenerationTimestamp>
+                        </configOptions>
+                        <generateApiTests>false</generateApiTests>
+                        <generateModelTests>false</generateModelTests>
+                        <generateApiDocumentation>false</generateApiDocumentation>
+                        <generateSupportingFiles>false</generateSupportingFiles>
+                        <generateModelDocumentation>false</generateModelDocumentation>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.8.0</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
@@ -638,8 +688,55 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.12</version>
+                <configuration>
+                    <!-- Place every module in the correct subfolder -->
+                    <path>${project.distributionManagement.site.url}</path>
+                    <message>Documentation for ${project.name} ${project.version}</message>
+                    <server>github</server>
+                    <repositoryName>cyberduck</repositoryName>
+                    <repositoryOwner>iterate-ch</repositoryOwner>
+                    <path>docs</path>
+                    <dryRun>true</dryRun>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>site</phase>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.3.1</version>
+                <reportSets>
+                    <reportSet>
+                        <id>aggregate</id>
+                        <inherited>false</inherited>
+                        <reports>
+                            <report>aggregate</report>
+                        </reports>
+                    </reportSet>
+                    <reportSet>
+                        <id>default</id>
+                        <reports>
+                            <report>javadoc</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <dependencies>
         <dependency>
@@ -658,6 +755,11 @@
             <id>maven.cyberduck.io-snapshot</id>
             <url>s3://repo.maven.cyberduck.io/snapshots/</url>
         </snapshotRepository>
+        <site>
+            <id>github-pages-site</id>
+            <name>Deployment through GitHub's site deployment plugin</name>
+            <url>docs</url>
+        </site>
     </distributionManagement>
 
     <repositories>
